--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "npm run build --workspaces --if-present",
     "dev": "npm -w @boilerplate-ts-webmodule/module run dev",
     "example": "npm run build && npx serve ./apps/example/dist",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky install"
   },
   "workspaces": [
     "./packages/types",
@@ -36,7 +36,6 @@
     "css-loader": "^6.8.1",
     "eslint": "^8.1.0",
     "html-webpack-plugin": "^5.5.0",
-    "husky": "^1.3.1",
     "lint-staged": "^8.1.5",
     "style-loader": "^3.3.3",
     "ts-node": "^10.4.0",
@@ -51,5 +50,13 @@
   "peerDependencies": {
     "eslint-plugin-prettier": "^5.0.0",
     "prettier": ">1.7.4"
+  },
+  "dependencies": {
+    "husky": "^8.0.3"
+  },
+  "lint-staged": {
+    "*.{ts,tsx}": [
+      "./node_modules/.bin/eslint --fix"
+    ]
   }
 }
